--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea
-vendor/github.com/  
-vendor/golang.org/  
-vendor/gopkg.in/
+vendor/github.com/*  
+vendor/golang.org/*
+vendor/gopkg.in/*
 backend/gin.log
 backend/comment.exe
 backend/comment
+backend/main
