* 优化日志中间件和授权中间件，做点准备工作

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 vendor/github.com/*  
 vendor/golang.org/*
 vendor/gopkg.in/*
-backend/gin.log
+
+backend/runtime
 backend/comment.exe
 backend/comment
 backend/main
